--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "./node_modules/.bin/nodemon ./index.js"
+    "dev": "node --watch index.js"
   },
   "author": "Yorick Devleeschouwer",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
   }
 }
